--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-О нас | {{ title }}
+О проекте | {{ title }}
 {% endblock %}
 
 {% block content %}
@@ -9,8 +9,8 @@
     <!-- Hero секция -->
     <div class="row mb-5">
         <div class="col-12 text-center">
-            <h1><i class="bi bi-building"></i> О нашей компании</h1>
-            <p class="lead">Мы создаем будущее веб-разработки</p>
+            <h1><i class="bi bi-building"></i> Проект <h1>
+            <p class="lead">Этот блог создан для обучения Django и создания полезного контента.</p>
         </div>
     </div>
 
