--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,24 +1,24 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
-    background-color: #f0f0f0;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 20px;
+  background-color: #e5dddd;
 }
 
 nav ul {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 nav ul li {
-    display: inline;
-    margin-right: 20px;
+  display: inline;
+  margin-right: 20px;
 }
 
 .active {
-    color: #ffffff;
-    background-color: #007bff;
-    padding: 8px 16px;
-    border-radius: 4px;
-    text-decoration: none;
+  color: #ffffff;
+  background-color: #195b03;
+  padding: 8px 16px;
+  border-radius: 4px;
+  text-decoration: none;
 }
