--- a/python_blog/templates/blog.html
+++ b/python_blog/templates/blog.html
@@ -9,8 +9,7 @@
     <!-- Заголовок и фильтры -->
     <div class="row mb-4">
         <div class="col-md-8">
-            <h1><i class="bi bi-journal-text"></i> Все посты</h1>
-            
+            <h1><i class="bi bi-journal-text"></i> Блог</h1>
         </div>
         <div class="col-md-4">
             <div class="input-group">
